z-index of billboard/menu fixed

--- a/custom.css
+++ b/custom.css
@@ -97,19 +97,9 @@ body.page-parent #home-content{}
 #menubar #menu-navigation li .sub-menu li > .sub-menu {
 	border:1px solid #BABABA!important;
 }
-#menubar #menu-navigation li .sub-menu li > .sub-menu li:first {
-	-webkit-background-clip:padding-box;
-	-moz-background-clip:padding-box;	
-}
-#menubar #menu-navigation li.menu-item-3860 .sub-menu{width:140px;}
-#menubar #menu-navigation li.menu-item-3860 .sub-menu a{width:auto;}
-#menubar #menu-navigation li.menu-item-3862 .sub-menu {width:120px;}
-#menubar #menu-navigation li.menu-item-3862 .sub-menu a{width:auto;}
-#menubar #menu-navigation li.menu-item-3863 .sub-menu{width:109px}
-#menubar #menu-navigation li.menu-item-3863 .sub-menu a{width:auto}
 #menubar #menu-navigation li .sub-menu >li{float:none}
 #menubar #menu-navigation li .sub-menu >li a{background:none 0 0 #222; font-size:11px; color:#fff;padding:3px 0 3px 7px}
-#menubar #menu-navigation li .sub-menu >li a:hover{background-color:#e21c22; color:#fff}
+#menubar #menu-navigation li .sub-menu >li a:hover{background-color:#790000; color:#fff}
 /**************************************
 * Footer
 **************************************/
